# tetris

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: Block.cpp  Block.hpp  Tetromino.cpp  Tetromino.hpp  TetrominoContainer.cpp  TetrominoContainer.hpp  TetrominoFactory.cpp  Vector.hpp  main.cpp
src/GameAnimation/: Animation.cpp  Animation.hpp  AnimationType.hpp  ClearLine.hpp  ClearLines.cpp  ClearLines.hpp  Scoring.cpp  Scoring.hpp
src/GameEntity/: ActiveTetromino.cpp  ActiveTetromino.hpp  Block.cpp  Block.hpp  BlockType.hpp  Hold.cpp  Hold.hpp  PreviewList.cpp  PreviewList.hpp  Score.cpp  Score.hpp  ScoreAction.hpp  ScoringSystem.cpp  ScoringSystem.hpp  SingleTetroBox.cpp  SingleTetroBox.hpp  Tetromino.cpp  Tetromino.hpp  TetrominoContainer.cpp  TetrominoContainer.hpp  TetrominoFactory.cpp  TetrominoFactory.hpp
src/GameSetting/: BlockTheme.hpp  BlockThemeSetter.cpp  BlockThemeSetter.hpp  Setting.cpp  Setting.hpp
src/GameUI/: Config.hpp  Status.hpp  UI.cpp  UI.hpp
src/Menu/: Base.cpp  Base.hpp  GameOver.cpp  GameOver.hpp  Pause.cpp  Pause.hpp  Start.cpp  Start.hpp
src/Resources/: BlockTextureCollection.cpp  BlockTextureCollection.hpp  FontCollection.cpp  FontCollection.hpp
src/Utils/: Area.cpp  Area.hpp  Button.cpp  Button.hpp  Clickable.cpp  Clickable.hpp  Drawable.cpp  Drawable.hpp  Layer.cpp  Layer.hpp  LayerControl.cpp  LayerControl.hpp  Layout.cpp  Layout.hpp
